# macos-optimizer-beta

./: AGENTS.md  CLAUDE.md  README.md  build.sh  package-lock.json  package.json
.claude/output-styles/: brain.md
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md
agent0/: coding_rules.md  plan_agent.md
docs/: OPTIMIZATION_ROADMAP.md  phase_2.md  phase_3.md  phase_4.md  storage_cleaner_revamp.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/rules/: cleaner_rules.json
src-tauri/src/: app.rs  config.rs  file_cleaner.rs  lib.rs  main.rs  memory_optimizer.rs  ops.rs  system_info.rs
src-tauri/src/file_cleaner/: advanced_safety.rs  auto_selection.rs  cache.rs  dependency_checker.rs  duplicate_detector.rs  engine.rs  engine_utils.rs  enhanced_engine.rs  enhanced_rules.rs  macos_integration.rs  process_snapshot.rs  safety.rs  smart_cache.rs  telemetry.rs  tests.rs  types.rs  validation.rs
src-tauri/src/file_cleaner/safety/: context.rs  mod.rs  policy.rs  risk.rs
src-tauri/src/memory_optimizer/: admin.rs  non_admin.rs  stats.rs  utils.rs
src-tauri/src/metrics/: cpu.rs  disk.rs  memory.rs  mod.rs  sampler.rs  tests.rs  types.rs  uptime.rs
src-tauri/src/system_info/: cache.rs
src-tauri/tests/: storage_cleaner.rs
src/js/: operation-queue.js  progress-manager.js
src/styles/base/: elegance.css  reset.css  typography.css  variables.css
src/styles/components/: badges.css  buttons.css  cards.css  modals.css  notifications.css  progress.css
src/styles/layout/: content.css  sidebar.css
src/styles/pages/: dashboard.css  memory.css  processes.css  (+1 more)
(+1 files in other folders)
