[package]
name = "macos-optimizer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "macos_optimizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
walkdir = "2"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
bytesize = "1"
libc = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
rayon = "1.8"
uuid = { version = "1.0", features = ["v4"] }
dashmap = "5.5"
lru = "0.12"
lazy_static = "1.4"
num_cpus = "1.16"
regex = "1.10"
sha2 = "0.10"
log = "0.4"

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["parallel-scan", "metrics"]
app = ["dep:tauri", "dep:tauri-plugin-opener"]
# Enable faster file scanning with Rayon + DashMap
parallel-scan = []
# Enable metadata caching structures (not required for core scanning)
metadata-cache = []
# Background cache refresher depends on metadata-cache
cache-refresh = ["metadata-cache"]
# Lightweight operation timing/metrics helpers
metrics = []

[[bin]]
name = "macos-optimizer"
path = "src/main.rs"
required-features = ["app"]
